// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`storyshots components/visualize/TableView default 1`] = `
<div
  style="height: 100%;"
>
  <div>
    <div
      class="
      p-py-1
      p-d-flex
      p-jc-between
      p-flex-wrap
      lck-data-toolbar
    "
    >
      <div
        class="p-d-flex p-flex-wrap"
      >
        <div
          class="lck-overlay-panel"
        >
          <button
            class="p-button p-component p-button-outlined p-button-secondary"
            disabled="disabled"
            type="button"
          >
            <span
              class="pi pi-filter p-button-icon p-button-icon-left"
            />
             
            <span
              class="p-button-label"
            >
              no filter
            </span>
             
            <!---->
            <span
              class="p-ink"
            />
          </button>
           
          <!---->
        </div>
      </div>
       
      <div
        class="p-d-flex p-flex-wrap"
      >
        <!---->
         
        <!---->
      </div>
    </div>
     
    <!---->
     
    <form>
      <!---->
    </form>
  </div>
</div>
`;

exports[`storyshots components/visualize/TableView with definition 1`] = `
<div
  style="height: 100%;"
>
  <div>
    <div
      class="
      p-py-1
      p-d-flex
      p-jc-between
      p-flex-wrap
      lck-data-toolbar
    "
    >
      <div
        class="p-d-flex p-flex-wrap"
      >
        <div
          class="lck-overlay-panel"
        >
          <button
            class="p-button p-component p-button-outlined p-button-secondary"
            disabled="disabled"
            type="button"
          >
            <span
              class="pi pi-filter p-button-icon p-button-icon-left"
            />
             
            <span
              class="p-button-label"
            >
              no filter
            </span>
             
            <!---->
            <span
              class="p-ink"
            />
          </button>
           
          <!---->
        </div>
      </div>
       
      <div
        class="p-d-flex p-flex-wrap"
      >
        <!---->
         
        <!---->
      </div>
    </div>
     
    <div
      class="p-d-flex p-flex-column d-flex-1 o-auto p-jc-between"
      style="min-height: 30rem;"
    >
      <div
        class="responsive-table-wrapper p-fluid d-flex-1"
      >
        <div
          cellstate="[object Object]"
          class="
        p-datatable-sm
        p-datatable-gridlines
        p-d-flex
        p-flex-column
        justify-between
       p-datatable p-component p-datatable-resizable"
          style="width: calc(6rem + 450px);"
        >
          <!---->
           
          <div>
            <!---->
          </div>
          <div>
            <!---->
          </div>
          <div>
            <!---->
          </div>
           
          <!---->
           
          <!---->
           
          <!---->
           
          <div
            class="p-datatable-wrapper"
          >
            <table
              role="grid"
            >
              <thead
                class="p-datatable-thead"
              >
                <tr />
                 
                <!---->
              </thead>
               
              <tbody
                class="p-datatable-tbody"
              >
                <tr
                  class="p-datatable-emptymessage"
                >
                  <td
                    colspan="0"
                  >
                    <p
                      align="center"
                    >
                      No data to display
                    </p>
                     
                    <!---->
                  </td>
                </tr>
              </tbody>
               
              <!---->
            </table>
          </div>
           
          <!---->
           
          <!---->
           
          <div
            class="p-column-resizer-helper"
            style="display: none;"
          />
           
          <!---->
           
          <!---->
        </div>
         
        <!---->
      </div>
       
      <!---->
    </div>
     
    <form>
      <!---->
    </form>
  </div>
</div>
`;

exports[`storyshots components/visualize/TableView with definition and content 1`] = `
<div
  style="height: 100%;"
>
  <div>
    <div
      class="
      p-py-1
      p-d-flex
      p-jc-between
      p-flex-wrap
      lck-data-toolbar
    "
    >
      <div
        class="p-d-flex p-flex-wrap"
      >
        <div
          class="lck-overlay-panel"
        >
          <button
            class="p-button p-component p-button-outlined p-button-secondary"
            type="button"
          >
            <span
              class="pi pi-filter p-button-icon p-button-icon-left"
            />
             
            <span
              class="p-button-label"
            >
              no filter
            </span>
             
            <!---->
            <span
              class="p-ink"
            />
          </button>
           
          <!---->
        </div>
      </div>
       
      <div
        class="p-d-flex p-flex-wrap"
      >
        <!---->
         
        <!---->
      </div>
    </div>
     
    <div
      class="p-d-flex p-flex-column d-flex-1 o-auto p-jc-between"
      style="min-height: 30rem;"
    >
      <div
        class="responsive-table-wrapper p-fluid d-flex-1"
      >
        <div
          cellstate="[object Object]"
          class="
        p-datatable-sm
        p-datatable-gridlines
        p-d-flex
        p-flex-column
        justify-between
       p-datatable p-component p-datatable-resizable"
          style="width: calc(6rem + 450px);"
        >
          <!---->
           
          <div>
            <!---->
          </div>
          <div>
            <!---->
          </div>
          <div>
            <!---->
          </div>
           
          <!---->
           
          <!---->
           
          <!---->
           
          <div
            class="p-datatable-wrapper"
          >
            <table
              role="grid"
            >
              <thead
                class="p-datatable-thead"
              >
                <tr />
                 
                <!---->
              </thead>
               
              <tbody
                class="p-datatable-tbody"
              >
                <!---->
                 
                <tr
                  class=""
                />
                 
                <!---->
                 
                <!---->
                <!---->
                 
                <tr
                  class=""
                />
                 
                <!---->
                 
                <!---->
              </tbody>
               
              <!---->
            </table>
          </div>
           
          <!---->
           
          <!---->
           
          <div
            class="p-column-resizer-helper"
            style="display: none;"
          />
           
          <!---->
           
          <!---->
        </div>
         
        <!---->
      </div>
       
      <div
        class="p-paginator p-component"
        limit="10"
      >
        <!---->
         
        <button
          class="p-paginator-first p-paginator-element p-link p-disabled"
          disabled="disabled"
          type="button"
        >
          <span
            class="p-paginator-icon pi pi-angle-double-left"
          />
          <span
            class="p-ink"
          />
        </button>
        <button
          class="p-paginator-prev p-paginator-element p-link p-disabled"
          disabled="disabled"
          type="button"
        >
          <span
            class="p-paginator-icon pi pi-angle-left"
          />
          <span
            class="p-ink"
          />
        </button>
        <span
          class="p-paginator-pages"
        >
          <button
            class="p-paginator-page p-paginator-element p-link p-highlight"
            type="button"
          >
            1
            <span
              class="p-ink"
            />
          </button>
        </span>
        <button
          class="p-paginator-next p-paginator-element p-link p-disabled"
          disabled="disabled"
          type="button"
        >
          <span
            class="p-paginator-icon pi pi-angle-right"
          />
          <span
            class="p-ink"
          />
        </button>
        <button
          class="p-paginator-last p-paginator-element p-link p-disabled"
          disabled="disabled"
          type="button"
        >
          <span
            class="p-paginator-icon pi pi-angle-double-right"
          />
          <span
            class="p-ink"
          />
        </button>
        <span
          class="p-paginator-current"
        >
          Showing 1 to 2 of 2 entries
        </span>
         
        <div
          class="p-paginator-right-content"
        >
          <div
            class="paginator-nav"
          >
            <p
              class="label"
            >
              
        Jump to page
      
            </p>
             
            <div
              class="p-dropdown p-component p-inputwrapper"
              dropdown="true"
            >
              <div
                class="p-hidden-accessible"
              >
                <input
                  aria-haspopup="listbox"
                  readonly="readonly"
                  type="text"
                />
              </div>
               
              <!---->
               
              <span
                class="p-dropdown-label p-inputtext"
              >
                
            1
        
              </span>
               
              <!---->
               
              <div
                aria-haspopup="listbox"
                class="p-dropdown-trigger"
                role="button"
              >
                <span
                  class="p-dropdown-trigger-icon pi pi-chevron-down"
                />
              </div>
               
              <!---->
            </div>
          </div>
        </div>
      </div>
    </div>
     
    <form>
      <!---->
    </form>
  </div>
</div>
`;

exports[`storyshots components/visualize/TableView with definition and content and toolbar buttons 1`] = `
<div
  style="height: 100%;"
>
  <div>
    <div
      class="
      p-py-1
      p-d-flex
      p-jc-between
      p-flex-wrap
      lck-data-toolbar
    "
    >
      <div
        class="p-d-flex p-flex-wrap"
      >
        <div
          class="lck-overlay-panel"
        >
          <button
            class="p-button p-component p-button-outlined p-button-secondary"
            type="button"
          >
            <span
              class="pi pi-filter p-button-icon p-button-icon-left"
            />
             
            <span
              class="p-button-label"
            >
              no filter
            </span>
             
            <!---->
            <span
              class="p-ink"
            />
          </button>
           
          <!---->
        </div>
      </div>
       
      <div
        class="p-d-flex p-flex-wrap"
      >
        <button
          class="p-mr-2 p-button p-component"
          type="button"
        >
          <span
            class="pi pi-plus-circle p-button-icon p-button-icon-left"
          />
           
          <span
            class="p-button-label"
          >
            Add
          </span>
           
          <!---->
          <span
            class="p-ink"
          />
        </button>
         
        <div
          class="lck-dropdownbutton"
        >
          <button
            aria-controls="pv_id_7_overlay"
            aria-haspopup="true"
            class="lck-dropdownbutton-menubutton p-button p-component p-button-secondary button-with-icon"
            type="button"
          >
            <span
              class="pi pi-download p-button-icon p-button-icon-left"
            />
             
            <span
              class="p-button-label"
            >
              Export as
            </span>
             
            <!---->
            <span
              class="p-ink"
            />
          </button>
           
          <!---->
        </div>
      </div>
    </div>
     
    <div
      class="p-d-flex p-flex-column d-flex-1 o-auto p-jc-between"
      style="min-height: 30rem;"
    >
      <div
        class="responsive-table-wrapper p-fluid d-flex-1"
      >
        <div
          cellstate="[object Object]"
          class="
        p-datatable-sm
        p-datatable-gridlines
        p-d-flex
        p-flex-column
        justify-between
       p-datatable p-component p-datatable-resizable"
          style="width: calc(6rem + 450px);"
        >
          <!---->
           
          <div>
            <!---->
          </div>
          <div>
            <!---->
          </div>
          <div>
            <!---->
          </div>
           
          <!---->
           
          <!---->
           
          <!---->
           
          <div
            class="p-datatable-wrapper"
          >
            <table
              role="grid"
            >
              <thead
                class="p-datatable-thead"
              >
                <tr />
                 
                <!---->
              </thead>
               
              <tbody
                class="p-datatable-tbody"
              >
                <!---->
                 
                <tr
                  class=""
                />
                 
                <!---->
                 
                <!---->
                <!---->
                 
                <tr
                  class=""
                />
                 
                <!---->
                 
                <!---->
              </tbody>
               
              <!---->
            </table>
          </div>
           
          <!---->
           
          <!---->
           
          <div
            class="p-column-resizer-helper"
            style="display: none;"
          />
           
          <!---->
           
          <!---->
        </div>
         
        <!---->
      </div>
       
      <div
        class="p-paginator p-component"
        limit="10"
      >
        <!---->
         
        <button
          class="p-paginator-first p-paginator-element p-link p-disabled"
          disabled="disabled"
          type="button"
        >
          <span
            class="p-paginator-icon pi pi-angle-double-left"
          />
          <span
            class="p-ink"
          />
        </button>
        <button
          class="p-paginator-prev p-paginator-element p-link p-disabled"
          disabled="disabled"
          type="button"
        >
          <span
            class="p-paginator-icon pi pi-angle-left"
          />
          <span
            class="p-ink"
          />
        </button>
        <span
          class="p-paginator-pages"
        >
          <button
            class="p-paginator-page p-paginator-element p-link p-highlight"
            type="button"
          >
            1
            <span
              class="p-ink"
            />
          </button>
        </span>
        <button
          class="p-paginator-next p-paginator-element p-link p-disabled"
          disabled="disabled"
          type="button"
        >
          <span
            class="p-paginator-icon pi pi-angle-right"
          />
          <span
            class="p-ink"
          />
        </button>
        <button
          class="p-paginator-last p-paginator-element p-link p-disabled"
          disabled="disabled"
          type="button"
        >
          <span
            class="p-paginator-icon pi pi-angle-double-right"
          />
          <span
            class="p-ink"
          />
        </button>
        <span
          class="p-paginator-current"
        >
          Showing 1 to 2 of 2 entries
        </span>
         
        <div
          class="p-paginator-right-content"
        >
          <div
            class="paginator-nav"
          >
            <p
              class="label"
            >
              
        Jump to page
      
            </p>
             
            <div
              class="p-dropdown p-component p-inputwrapper"
              dropdown="true"
            >
              <div
                class="p-hidden-accessible"
              >
                <input
                  aria-haspopup="listbox"
                  readonly="readonly"
                  type="text"
                />
              </div>
               
              <!---->
               
              <span
                class="p-dropdown-label p-inputtext"
              >
                
            1
        
              </span>
               
              <!---->
               
              <div
                aria-haspopup="listbox"
                class="p-dropdown-trigger"
                role="button"
              >
                <span
                  class="p-dropdown-trigger-icon pi pi-chevron-down"
                />
              </div>
               
              <!---->
            </div>
          </div>
        </div>
      </div>
    </div>
     
    <form>
      <!---->
    </form>
  </div>
</div>
`;

exports[`storyshots components/visualize/TableView with definition and toolbar buttons 1`] = `
<div
  style="height: 100%;"
>
  <div>
    <div
      class="
      p-py-1
      p-d-flex
      p-jc-between
      p-flex-wrap
      lck-data-toolbar
    "
    >
      <div
        class="p-d-flex p-flex-wrap"
      >
        <div
          class="lck-overlay-panel"
        >
          <button
            class="p-button p-component p-button-outlined p-button-secondary"
            disabled="disabled"
            type="button"
          >
            <span
              class="pi pi-filter p-button-icon p-button-icon-left"
            />
             
            <span
              class="p-button-label"
            >
              no filter
            </span>
             
            <!---->
            <span
              class="p-ink"
            />
          </button>
           
          <!---->
        </div>
      </div>
       
      <div
        class="p-d-flex p-flex-wrap"
      >
        <button
          class="p-mr-2 p-button p-component"
          type="button"
        >
          <span
            class="pi pi-plus-circle p-button-icon p-button-icon-left"
          />
           
          <span
            class="p-button-label"
          >
            Add
          </span>
           
          <!---->
          <span
            class="p-ink"
          />
        </button>
         
        <div
          class="lck-dropdownbutton"
        >
          <button
            aria-controls="pv_id_6_overlay"
            aria-haspopup="true"
            class="lck-dropdownbutton-menubutton p-button p-component p-button-secondary button-with-icon"
            disabled="disabled"
            type="button"
          >
            <span
              class="pi pi-download p-button-icon p-button-icon-left"
            />
             
            <span
              class="p-button-label"
            >
              Export as
            </span>
             
            <!---->
            <span
              class="p-ink"
            />
          </button>
           
          <!---->
        </div>
      </div>
    </div>
     
    <div
      class="p-d-flex p-flex-column d-flex-1 o-auto p-jc-between"
      style="min-height: 30rem;"
    >
      <div
        class="responsive-table-wrapper p-fluid d-flex-1"
      >
        <div
          cellstate="[object Object]"
          class="
        p-datatable-sm
        p-datatable-gridlines
        p-d-flex
        p-flex-column
        justify-between
       p-datatable p-component p-datatable-resizable"
          style="width: calc(6rem + 450px);"
        >
          <!---->
           
          <div>
            <!---->
          </div>
          <div>
            <!---->
          </div>
          <div>
            <!---->
          </div>
           
          <!---->
           
          <!---->
           
          <!---->
           
          <div
            class="p-datatable-wrapper"
          >
            <table
              role="grid"
            >
              <thead
                class="p-datatable-thead"
              >
                <tr />
                 
                <!---->
              </thead>
               
              <tbody
                class="p-datatable-tbody"
              >
                <tr
                  class="p-datatable-emptymessage"
                >
                  <td
                    colspan="0"
                  >
                    <p
                      align="center"
                    >
                      No data to display
                    </p>
                     
                    <!---->
                  </td>
                </tr>
              </tbody>
               
              <!---->
            </table>
          </div>
           
          <!---->
           
          <!---->
           
          <div
            class="p-column-resizer-helper"
            style="display: none;"
          />
           
          <!---->
           
          <!---->
        </div>
         
        <!---->
      </div>
       
      <!---->
    </div>
     
    <form>
      <!---->
    </form>
  </div>
</div>
`;
